# elwood

./: .gitignore  CHANGELOG.md  CLAUDE.md  PROMPT.md  README.md  SOUL.md  cabal.project  config.yaml.example  elwood.cabal  flake.nix  weeder.toml
.github/workflows/: ci.yml
app/: Main.hs
docs/: architecture.d2
modules/: assistant.nix
modules/tests/: default.nix
src/Elwood/: Aeson.hs  AgentSettings.hs  App.hs  Approval.hs  Claude.hs  Command.hs  Config.hs  Event.hs  Image.hs  Logging.hs  MCP.hs  Memory.hs  Metrics.hs  Notify.hs  Permissions.hs  Positive.hs  Prompt.hs  Scheduler.hs  Session.hs  Telegram.hs  Thinking.hs  Tools.hs  Webhook.hs
src/Elwood/Claude/: AgentLoop.hs  Client.hs  Compaction.hs  Conversation.hs  Handler.hs  Observer.hs  Pruning.hs  Types.hs
src/Elwood/Event/: Types.hs
src/Elwood/MCP/: Client.hs  Registry.hs  Types.hs
src/Elwood/Telegram/: Client.hs  Handler.hs  Markdown.hs  Polling.hs  Types.hs
src/Elwood/Tools/: AsyncTask.hs  Attachment.hs  Command.hs  Delegate.hs  FileSystem.hs  Memory.hs  Meta.hs  Registry.hs  Types.hs  Web.hs
src/Elwood/Webhook/: Server.hs  Types.hs
test/: Main.hs
test/Test/Elwood/: AgentSettings.hs  Attachment.hs  Config.hs  Event.hs  Image.hs  MCP.hs  Memory.hs  Metrics.hs  Permissions.hs  Scheduler.hs  Session.hs  Webhook.hs
test/Test/Elwood/Claude/: AgentLoop.hs  Client.hs  Compaction.hs  Pruning.hs  Types.hs
test/Test/Elwood/Telegram/: Client.hs  Markdown.hs
test/Test/Elwood/Tools/: AsyncTask.hs  Delegate.hs  Meta.hs  Registry.hs
workspace/: SOUL.md
