cabal-version:      3.0
name:               elwood
version:            0.1.0.0
synopsis:           Self-hosted personal AI assistant
description:        A self-hosted personal AI assistant that integrates with Telegram
                    and Claude to provide an always-available AI companion.
license:            MIT
author:             Matt
maintainer:         matt@example.com
category:           AI, Bot
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        Elwood.App
        Elwood.Claude.AgentLoop
        Elwood.Claude.Client
        Elwood.Claude.Conversation
        Elwood.Claude.Handler
        Elwood.Claude.Types
        Elwood.Config
        Elwood.Logging
        Elwood.Permissions
        Elwood.Telegram.Client
        Elwood.Telegram.Polling
        Elwood.Telegram.Types
        Elwood.Tools.Command
        Elwood.Tools.FileSystem
        Elwood.Tools.Registry
        Elwood.Tools.Types
        Elwood.Tools.Web
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.1 && < 2.3,
        yaml >= 0.11 && < 0.14,
        text >= 2.0 && < 2.2,
        bytestring >= 0.11 && < 0.13,
        containers >= 0.6 && < 0.8,
        http-client >= 0.7 && < 0.8,
        http-client-tls >= 0.3 && < 0.4,
        http-types >= 0.12 && < 0.13,
        async >= 2.2 && < 2.3,
        stm >= 2.5 && < 2.6,
        co-log-core >= 0.3 && < 0.4,
        filepath >= 1.4 && < 1.6,
        directory >= 1.3 && < 1.4,
        time >= 1.12 && < 1.15,
        mtl >= 2.2 && < 2.4,
        process >= 1.6 && < 1.8,
        regex-tdfa >= 1.3 && < 1.4,
        tagsoup >= 0.14 && < 0.15
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
        DerivingStrategies
        GeneralizedNewtypeDeriving
        LambdaCase
        RecordWildCards
        TypeApplications

executable elwood
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        elwood
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
