cabal-version:   3.0
name:            elwood
version:         0.1.0.0
synopsis:        Self-hosted personal AI assistant
description:
  A self-hosted personal AI assistant that integrates with Telegram
  and Claude to provide an always-available AI companion.

license:         MIT
author:          Matt
maintainer:      matt@example.com
category:        AI, Bot
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:      config.yaml.example

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:             warnings
  exposed-modules:
    Elwood.Aeson
    Elwood.App
    Elwood.Approval
    Elwood.Claude
    Elwood.Claude.AgentLoop
    Elwood.Claude.Client
    Elwood.Claude.Compaction
    Elwood.Claude.Conversation
    Elwood.Claude.Pruning
    Elwood.Claude.Types
    Elwood.Config
    Elwood.Event
    Elwood.Event.Types
    Elwood.Logging
    Elwood.MCP
    Elwood.MCP.Client
    Elwood.MCP.Registry
    Elwood.MCP.Types
    Elwood.Memory
    Elwood.Metrics
    Elwood.Notify
    Elwood.Permissions
    Elwood.Prompt
    Elwood.Telegram
    Elwood.Telegram.Client
    Elwood.Telegram.Markdown
    Elwood.Telegram.Polling
    Elwood.Telegram.Types
    Elwood.Thinking
    Elwood.Tools
    Elwood.Tools.Attachment
    Elwood.Tools.Command
    Elwood.Tools.Memory
    Elwood.Tools.Registry
    Elwood.Tools.Types
    Elwood.Webhook
    Elwood.Webhook.Server
    Elwood.Webhook.Types

  build-depends:
    , aeson              >=2.1  && <2.3
    , async              >=2.2  && <2.3
    , base               >=4.17 && <5
    , base64-bytestring  >=1.2  && <1.3
    , bytestring         >=0.11 && <0.13
    , cmark-gfm          >=0.2  && <0.3
    , co-log-core        >=0.3  && <0.4
    , containers         >=0.6  && <0.8
    , directory          >=1.3  && <1.4
    , filepath           >=1.4  && <1.6
    , http-client        >=0.7  && <0.8
    , http-client-tls    >=0.3  && <0.4
    , http-types         >=0.12 && <0.13
    , mtl                >=2.2  && <2.4
    , process            >=1.6  && <1.8
    , regex-tdfa         >=1.3  && <1.4
    , stm                >=2.5  && <2.6
    , text               >=2.0  && <2.2
    , time               >=1.12 && <1.15
    , uuid               >=1.3  && <1.4
    , vector             >=0.13 && <0.14
    , wai                >=3.2  && <3.3
    , warp               >=3.3  && <3.5
    , yaml               >=0.11 && <0.14

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications

executable elwood
  import:             warnings
  main-is:            Main.hs
  build-depends:
    , base    >=4.17 && <5
    , elwood

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions: OverloadedStrings
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

test-suite elwood-test
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Paths_elwood
    Test.Elwood.Attachment
    Test.Elwood.Claude.Client
    Test.Elwood.Claude.Compaction
    Test.Elwood.Claude.Pruning
    Test.Elwood.Claude.Types
    Test.Elwood.Config
    Test.Elwood.Event
    Test.Elwood.MCP
    Test.Elwood.Memory
    Test.Elwood.Metrics
    Test.Elwood.Permissions
    Test.Elwood.Telegram.Markdown
    Test.Elwood.Tools.Registry
    Test.Elwood.Webhook

  build-depends:
    , aeson             >=2.1  && <2.3
    , base              >=4.17 && <5
    , bytestring        >=0.11 && <0.13
    , containers        >=0.6  && <0.8
    , directory         >=1.3  && <1.4
    , elwood
    , filepath          >=1.4  && <1.6
    , stm               >=2.5  && <2.6
    , tasty             >=1.4  && <1.6
    , tasty-hunit       >=0.10 && <0.11
    , tasty-quickcheck  >=0.10 && <0.12
    , temporary         >=1.3  && <1.4
    , text              >=2.0  && <2.2
    , vector            >=0.13 && <0.14

  hs-source-dirs:     test
  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings

  ghc-options:        -threaded -rtsopts
